--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <label *ngIf="products == 0">No data to display</label>
+    <label *ngIf="products.length == 0">No data to display</label>
     <div class="products">
         <div class="products-list" >
             <app-product *ngFor="let product of products | filterProducts: productName | sortProducts: sortType | paginate: { itemsPerPage: 5, currentPage: pageIndex }"
@@ -32,7 +32,7 @@
         </div>
 
         <div class="product-details" *ngIf="productSelected">
-            <app-product-details [product]="productSelected" [showDetails]="showDetails" (save)="saveDetails($event)">
+            <app-product-details [product]="productSelected" (save)="saveDetails($event)">
             </app-product-details>
         </div>
     </div>
