--- a/src/app/popup/add-product/add-product.component.html
+++ b/src/app/popup/add-product/add-product.component.html
@@ -51,7 +51,7 @@
         </form>
     </div>
     <div mat-dialog-actions>
-        <button mat-raised-button class="btn-close" (click)="onNoClick()">Close</button>
+        <button mat-raised-button class="btn-close" (click)="close()">Close</button>
         <button mat-raised-button class="btn-add" [disabled]="!form.valid" (click)="addProduct()">Add</button>
     </div>
 </div>
