--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
         <div class="search-product">
             <mat-form-field>
-                <input matInput name="bookName" [(ngModel)]="productName" placeholder="asearch product">
+                <input matInput name="productName" [(ngModel)]="productName" placeholder="asearch product">
             </mat-form-field>
         </div>
 
